--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -4,14 +4,25 @@
     "src/renderer/src/env.d.ts",
     "src/renderer/src/**/*",
     "src/renderer/src/**/*.tsx",
-    "src/preload/*.d.ts"
+    "src/preload/*.d.ts",
+    "src/shared/**/*"
   ],
   "compilerOptions": {
     "composite": true,
+    "allowJs": true,
+    "resolveJsonModule": true,
+    "noUnusedLocals": true,
+    "strict": true,
     "jsx": "react-jsx",
     "baseUrl": ".",
     "paths": {
       "@renderer/*": [
+        "src/renderer/src/*"
+      ],
+      "@shared/*": [
+        "src/shared/*"
+      ],
+      "@/*": [
         "src/renderer/src/*"
       ]
     }
