--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -17,6 +17,11 @@
       "@shared/*": [
         "src/shared/*"
       ],
+
+      "@store/*": [
+        "src/renderer/src/store/*"
+      ]
+
       
     }
   }
