--- a/package.json
+++ b/package.json
@@ -24,14 +24,18 @@
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^3.0.0",
     "@mdxeditor/editor": "^3.11.3",
+    "fs-extra": "^11.2.0",
     "jotai": "2.9.3",
-    "sass": "1.77.8"
+    "react-toastify": "^10.0.5",
+    "sass": "1.77.8",
+    "sweetalert2": "^11.14.0"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^2.0.0",
     "@electron-toolkit/eslint-config-ts": "^2.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/lodash": "^4.17.7",
     "@types/node": "^20.14.8",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -43,6 +47,7 @@
     "electron-vite": "^2.3.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.3",
+    "lodash": "^4.17.21",
     "postcss": "^8.4.41",
     "prettier": "^3.3.2",
     "react": "^18.3.1",
